# generator

./: Dockerfile  Generator.py  Makefile  README.md  client.py  pyproject.toml
kubernetes/: generator-deployment.yml  recommender-deployment.yml
tensorbeat/datalake/: __init__.py
