[tool.poetry]
name = "midi-generator"
version = "0.1.0"
description = "generates midi songs from midi input"
authors = ["M Sarosh Khan <Msk15163@gmail.com>", "Mark Vadeika <markvadeika@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
music21 = "^6.7.1"
grpclib = "^0.4.1"
betterproto = {version = "^2.0.0b3", allow-prereleases = true}
tensorflow-gpu = "^2.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
